--- a/m2/working-with-assets/github-app/package.json
+++ b/m2/working-with-assets/github-app/package.json
@@ -1,29 +1,39 @@
 {
   "scripts": {
     "start": "webpack-dashboard -- node server.js",
+    "test": "jest --coverage",
+    "test:watch": "yarn test -- --watch",
+    "lint": "standard --verbose",
+    "lint:watch": "gulp",
+    "lint:fix": "standard --fix",
     "build": "cross-env NODE_ENV=production webpack --progress --config webpack.prod.config -p",
     "storybook": "start-storybook -p 6006 -c storybook",
     "build-storybook": "build-storybook -c storybook"
   },
   "devDependencies": {
+    "@kadira/storybook": "^2.21.0",
     "babel-core": "^6.26.3",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.2.0",
     "cross-env": "^7.0.2",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^1.0.1",
+    "gulp": "^3.9.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest-cli": "^25.1.0",
     "react-hot-loader": "^3.0.0-beta.2",
+    "snazzy": "^8.0.0",
     "standard": "^14.3.1",
     "standard-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.15.0",
     "webpack-dashboard": "^3.2.0",
     "webpack-dev-server": "^1.16.5",
-    "webpack-validator": "^3.0.1",
-    "@kadira/storybook": "^2.21.0"
+    "webpack-validator": "^3.0.1"
   },
   "dependencies": {
     "@fdaciuk/ajax": "^3.0.4",
