--- a/m2/working-with-assets/github-app/package.json
+++ b/m2/working-with-assets/github-app/package.json
@@ -3,7 +3,7 @@
     "start": "webpack-dashboard -- node server.js",
     "test": "jest --coverage",
     "test:watch": "yarn test -- --watch",
-    "lint": "standard --verbose",
+    "lint": "standard --verbose 'src/**/*.js'",
     "lint:watch": "gulp",
     "lint:fix": "standard --fix",
     "build": "cross-env NODE_ENV=production webpack --progress --config webpack.prod.config -p",
