--- a/m2/working-with-assets/github-app/package.json
+++ b/m2/working-with-assets/github-app/package.json
@@ -41,8 +41,6 @@
     "react-dom": "^15.4.2"
   },
   "standard": {
-    "globals": [
-      "alert"
-    ]
+    "globals": [ "test", "it", "describe" ]
   }
 }
