--- a/m2/markdown-app/package.json
+++ b/m2/markdown-app/package.json
@@ -56,6 +56,9 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "highlight.js": "^10.0.3",
+    "marked": "^1.1.0",
+    "normalize.css": "^8.0.1",
     "preact": "^8.2.5",
     "preact-compat": "^3.17.0",
     "prop-types": "^15.5.10",
