--- a/m2/markdown-app/package.json
+++ b/m2/markdown-app/package.json
@@ -50,13 +50,13 @@
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-dashboard": "^1.0.0-5",
     "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
-    "highlight.js": "^10.0.3",
+    "highlight.js": "9.18.1",
     "marked": "^1.1.0",
     "normalize.css": "^8.0.1",
     "preact": "^8.2.5",
