--- a/m2/markdown-app/package.json
+++ b/m2/markdown-app/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "yarn dev",
+    "start": "cross-env NODE_ENV=production node index.js",
     "dev": "webpack-dashboard -- node server.js",
     "test": "jest --coverage",
     "test:watch": "yarn test -- --watch",
@@ -20,6 +20,7 @@
   },
   "standard": {
     "globals": [
+      "localStorage",
       "it",
       "expect"
     ]
@@ -56,6 +57,8 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
     "highlight.js": "9.18.1",
     "marked": "^1.1.0",
     "normalize.css": "^8.0.1",
