--- a/m2/markdown-app/package.json
+++ b/m2/markdown-app/package.json
@@ -39,13 +39,14 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-15": "^1.4.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "gulp": "4.0.2",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.1.0",
     "react-hot-loader": "3.0.0",
-    "react-test-renderer": "^15.6.1",
+    "react-test-renderer": "15",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3",
     "standard-loader": "^6.0.1",
