--- a/system-register/package.json
+++ b/system-register/package.json
@@ -2,20 +2,6 @@
   "name": "sistema-pedidos",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "4.11.0",
-    "@material-ui/icons": "4.9.1",
-    "@testing-library/jest-dom": "4.2.4",
-    "@testing-library/react": "9.3.2",
-    "@testing-library/user-event": "7.1.2",
-    "firebase": "7.15.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.1",
-    "styled-components": "5.1.1",
-    "uuid": "8.2.0"
-  },
   "scripts": {
     "dev": "rescripts start",
     "build": "rescripts build",
@@ -27,6 +13,9 @@
       "react-app",
       "standard",
       "standard-react"
+    ],
+    "plugins": [
+      "only-warn"
     ]
   },
   "rescripts": [
@@ -50,6 +39,19 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "@material-ui/core": "4.11.0",
+    "@material-ui/icons": "4.9.1",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.3.2",
+    "@testing-library/user-event": "7.1.2",
+    "firebase": "7.15.5",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "3.4.1",
+    "styled-components": "5.1.1"
+  },
   "devDependencies": {
     "@rescripts/cli": "0.0.14",
     "@rescripts/rescript-env": "0.0.12",
@@ -58,6 +60,7 @@
     "eslint-config-standard-react": "9.2.0",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-only-warn": "1.0.2",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.20.3",
     "eslint-plugin-standard": "4.0.1",
